FIX: Fixed issue when navigation drop down incorrect visibled

--- a/CSS/FILES/CONTACTS/contacts__content.css
+++ b/CSS/FILES/CONTACTS/contacts__content.css
@@ -1,3 +1,11 @@
+.contacts-container-1 {
+  overflow: visible;
+}
+.navigation-block__bar {
+  position: relative;
+  z-index: 2;
+}
+
 .contacts-container-2 {
 	margin: 100px 0;
 	z-index: -1;
